# agentic_rag

./: .gitignore  README.md
basics/: Lesson_01.ipynb  pyproject.toml
