[tool.poetry]
name = "basics"
version = "0.1.0"
description = ""
authors = ["Rafael Moreira <rafaelmoreiracvo@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.10.43"
python-dotenv = "^1.0.1"
nest-asyncio = "^1.6.0"
ipykernel = "^6.29.4"
wget = "^3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
